kernel/tests/snapshots/abi_snapshot__entry_attached_on_budget.snap
---
source: kernel/tests/abi_snapshot.rs
expression: attached_on_budget ()
---
{
  "entry": "attached",
  "seq": 3,
  "hook": 2,
  "point": {
    "on_budget": {
      "dim": "tokens",
      "below": 50
    }
  },
  "failure": "open",
  "program": {
    "native": "low-tokens"
  }
}
