kernel/tests/snapshots/abi_snapshot__entry_claimed_by_harness.snap
---
source: kernel/tests/abi_snapshot.rs
expression: claimed_by_harness ()
---
{
  "entry": "claimed",
  "seq": 48,
  "agent": 0,
  "by": null
}
