kernel/tests/snapshots/abi_snapshot__entry_claimed_by_parent.snap
---
source: kernel/tests/abi_snapshot.rs
expression: claimed_by_parent ()
---
{
  "entry": "claimed",
  "seq": 47,
  "agent": 1,
  "by": 0
}
