kernel/tests/snapshots/abi_snapshot__entry_driver_down_crashed.snap
---
source: kernel/tests/abi_snapshot.rs
expression: driver_down_crashed ()
---
{
  "entry": "driver_down",
  "seq": 40,
  "driver": "model",
  "cause": "crashed"
}
