kernel/tests/snapshots/abi_snapshot__entry_driver_down_retired.snap
---
source: kernel/tests/abi_snapshot.rs
expression: driver_down_retired ()
---
{
  "entry": "driver_down",
  "seq": 90,
  "driver": "model",
  "cause": "retired"
}
