kernel/tests/snapshots/abi_snapshot__entry_driver_registered.snap
---
source: kernel/tests/abi_snapshot.rs
expression: driver_registered ()
---
{
  "entry": "driver_registered",
  "seq": 0,
  "driver": "tool",
  "cap": 0,
  "ceiling": {
    "tokens": 30
  },
  "reply_within": null
}
