kernel/tests/snapshots/abi_snapshot__entry_driver_registered_bounded.snap
---
source: kernel/tests/abi_snapshot.rs
expression: driver_registered_bounded ()
---
{
  "entry": "driver_registered",
  "seq": 0,
  "driver": "model",
  "cap": 0,
  "ceiling": {
    "tokens": 8000,
    "cost_microusd": 50000
  },
  "reply_within": 30000
}
